fix(validation exclamation icon): fix incorrect exclamation mark color for non-contrast validation

--- a/packages/form/src/FeedbackText.scss
+++ b/packages/form/src/FeedbackText.scss
@@ -42,9 +42,18 @@
     }
   }
   &--warning {
-    color: $colors-validation-sky;
-    .eds-contrast & {
-      color: $colors-validation-sky-contrast;
+    &.eds-icon__ValidationExclamationIcon {
+      color: $colors-validation-canary;
+      circle {
+        color: $colors-brand-blue;
+        fill-opacity: 1;
+      }
+      .eds-contrast & {
+        color: $colors-validation-canary-contrast;
+        circle {
+          fill-opacity: 0;
+        }
+      }
     }
   }
 }
