--- a/packages/travel/src/TravelTag.scss
+++ b/packages/travel/src/TravelTag.scss
@@ -149,8 +149,15 @@
     }
     &-exclamation-icon {
       color: $colors-validation-canary;
+      circle {
+        color: $colors-brand-blue;
+        fill-opacity: 1;
+      }
       .eds-contrast & {
         color: $colors-validation-canary-contrast;
+        circle {
+          fill-opacity: 0;
+        }
       }
     }
     &-error-icon {
